bplm/sfdx-src/main/default/objects/Business_Process_Stage__c/Business_Process_Stage__c.object-meta.xml
<CustomObject>
    <label>Business Process Stage</label>
    <nameField>
        <label>Business Process Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Process Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>