bplm/sfdx-src/main/default/objects/Business_Process_Stage__c/fields/Autocomplete__c.field-meta.xml
<CustomField>
    <fullName>Autocomplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autocomplete</label>
    <type>Checkbox</type>
</CustomField>