bplm/sfdx-src/main/default/objects/Business_Process_Stage__c/fields/Buffer_Days__c.field-meta.xml
<CustomField>
    <fullName>Buffer_Days__c</fullName>
    <description>Days needed as buffer prior to starting up this stage</description>
    <inlineHelpText>Days needed as buffer prior to starting up this stage</inlineHelpText>
    <label>Buffer Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>