bplm/sfdx-src/main/default/objects/Business_Process_Stage__c/fields/Business_Days_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_To_Complete__c</fullName>
    <description>SLA to complete the entire stage in number of days i.e. 10</description>
    <inlineHelpText>SLA to complete the entire stage in number of days i.e. 10</inlineHelpText>
    <label>Business Days To Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>