bplm/sfdx-src/main/default/objects/Business_Process_Stage__c/fields/Business_Process__c.field-meta.xml
<CustomField>
    <fullName>Business_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select business process this stage belong to</description>
    <inlineHelpText>Select business process this stage belong to</inlineHelpText>
    <label>Business Process</label>
    <referenceTo>Business_Process__c</referenceTo>
    <relationshipLabel>Business Process Stages</relationshipLabel>
    <relationshipName>Business_Process_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>