bplm/sfdx-src/main/default/objects/Business_Process_Stage__c/fields/Business_Process_Stage_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Process_Stage_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of this stage.</description>
    <label>Business Process Stage Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Process Stages</relationshipLabel>
    <relationshipName>Business_Process_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>