bplm/sfdx-src/main/default/objects/Business_Process_Stage__c/fields/Days_Before_Due_Date_For_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Days_Before_Due_Date_For_At_Risk__c</fullName>
    <description>How many days before due date so that stage can be flagged as At Risk i.e. 2 days before stage is completed</description>
    <inlineHelpText>How many days before due date so that stage can be flagged as At Risk i.e. 2 days before stage is completed</inlineHelpText>
    <label>Days Before Due Date For At Risk</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>