bplm/sfdx-src/main/default/objects/Business_Process_Stage__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Stage sequence in business process i.e. 2 or 5</description>
    <inlineHelpText>Stage sequence in business process i.e. 2 or 5</inlineHelpText>
    <label>Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>