bplm/sfdx-src/main/default/objects/Business_Process_Stage__c/fields/Stage_Summary__c.field-meta.xml
<CustomField>
    <fullName>Stage_Summary__c</fullName>
    <description>Brief summary of this stage</description>
    <inlineHelpText>Brief summary of this stage</inlineHelpText>
    <label>Stage Summary</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>