bplm/sfdx-src/main/default/objects/Business_Process_Stage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Process__c</columns>
    <columns>Stage_Summary__c</columns>
    <columns>Depend_Upon__c</columns>
    <columns>Business_Process_Stage_Owner__c</columns>
    <columns>Priority__c</columns>
    <columns>Sequence__c</columns>
    <columns>Business_Days_To_Complete__c</columns>
    <columns>Buffer_Days__c</columns>
    <columns>Days_Before_Due_Date_For_At_Risk__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Autocomplete__c</columns>
    <columns>Is_Optional__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>